manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: kitpg-certs
  labels:
    app: kitpg
    paas.redhat.com/appcode: CAI-001
    template: kitpg
    shard: internal
  name: kitpg-svc
spec:
  ports:
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    app: kitpg
  sessionAffinity: None
  type: ClusterIP
