manifests/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kitpg
  labels:
    app: kitpg
    app.kubernetes.io/component: kitpg
    app.kubernetes.io/name: kitpg
    paas.redhat.com/appcode: CAI-001
    shard: internal
spec:
  to:
    kind: Service
    name: kitpg-svc
    weight: 100
  port:
    targetPort: 8443-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
